--- a/finder-app/Makefile
+++ b/finder-app/Makefile
@@ -1,8 +1,11 @@
+CROSS_COMPILE ?= 
+CC := $(CROSS_COMPILE)gcc
+
 writer	: writer.o 
-		cc -o writer writer.o
+		$(CC) -o writer writer.o
 
 writer.o	: writer.c
-		cc -c writer.c
+		$(CC) -c writer.c
 
 clean	:
 		rm -f writer.o writer
