--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -6,7 +6,8 @@ on:
         branches:
             - '*'
 jobs:
-      full-test:
+    unit-test:
+        container: cuaesd/aesd-autotest:24-unit-test
         runs-on: self-hosted
         steps:
           - uses: actions/checkout@v2
@@ -22,10 +23,4 @@ jobs:
           - name: Checkout submodules
             run : git submodule update --init --recursive
           - name: Run full test
-            timeout-minutes: 15
-            run: |
-               docker run --rm \
-                 -v ${GITHUB_WORKSPACE}:${GITHUB_WORKSPACE} \
-                 cuaesd/aesd-autotest:assignment6-yocto \
-                 --workdir=${GITHUB_WORKSPACE} \
-                 ./full-test.sh
+            run: ./full-test.sh
